<resources>
    <string name="app_name">TesteSoma</string>
    <string name="txt_somar">Somar</string>
    <string name="txt_janela">Janela</string>
    <string name="txt_calcgorjeta">CalcGorjeta</string>
    <string name="txt_valor">Valor:</string>
    <string name="txt_gorjeta">Gorjeta:</string>
    <string name="txt_total">Total:</string>
    <string name="txt_IMC">IMC</string>
    <string name="txt_magro">magro</string>
    <string name="txt_normal">Normal</string>
    <string name="txt_sobrepeso">sobrepeso</string>
    <string name="txt_obeso">obeso</string>
    <string name="txt_pesomax">Peso máximo:</string>
    <string name="txt_pesomin">Peso mínimo:</string>
    <string name="txt_desenho">Desenho</string>
    <string name="txt_re">RE:</string>
    <string name="txt_nome">Nome:</string>
    <string name="txt_dataadmissao">Data de Admissão</string>
    <string name="txt_salario">Salário:</string>
    <string name="txt_cargo">Cargo:</string>
    <string name="txt_cadastrar">Cadastrar</string>
    <string name="txt_lista">Lista</string>
</resources>